# botanic-gard

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: context.c.6C9F222629FE484C.idx  egl_context.c.C875F39B3420297F.idx  glfw3.h.1D1FD436CF72C6A6.idx  glfw3native.h.F936509F3AA84F79.idx  glx_context.c.E2CCAD974DE02177.idx  imconfig.h.F51B7CC480F18053.idx  imgui.cpp.D239A59EAFBA8136.idx  imgui.h.506CB2C2AE4C14D2.idx  imgui_demo.cpp.E0D4E622CE125D1A.idx  imgui_draw.cpp.1A51374CBEC8FE27.idx  imgui_impl_glfw.cpp.8AD9942EB8E29B76.idx  imgui_impl_glfw.h.AEAED7E6A265CFD0.idx  imgui_impl_opengl3.cpp.3B75C773D2EE9E48.idx  imgui_impl_opengl3.h.AA89256710E99DC2.idx  imgui_impl_opengl3_loader.h.9904A9D1CBF457B0.idx  imgui_internal.h.5B4A8738ABC1977C.idx  imgui_tables.cpp.B53EFF3D19CD5E69.idx  imgui_widgets.cpp.A20A2F13FF10A47A.idx  imstb_rectpack.h.2E5D1C5EBA0FA8DF.idx  imstb_textedit.h.EBBEB45AC2576050.idx  imstb_truetype.h.E6C2C7A1856F7E84.idx  init.c.652C71F519AFA008.idx  input.c.0F4435FD48FDBCD8.idx  internal.h.DB9BA246C5C9F5E4.idx  linux_joystick.c.62735A1E7856E170.idx  linux_joystick.h.BD403369998B2C7B.idx  main.cpp.38E73791E30724C4.idx  mappings.h.4C0CEF94FE01D60E.idx  monitor.c.8AA3622462045B55.idx  null_init.c.7D8035B806D09492.idx  null_joystick.c.80BA283877C9BFE9.idx  null_joystick.h.D1CDE76E907C5171.idx  null_monitor.c.48153CACBFC8AC3D.idx  null_platform.h.FD8F8094F9907A83.idx  null_window.c.B318408CD145DD97.idx  osmesa_context.c.D4F5353C73F41C4A.idx  platform.c.5DFD98AA0CD333C9.idx  platform.h.81FA6A139A94449A.idx  posix_module.c.9039C5B17A90727E.idx  posix_poll.c.71017F1BF71840D3.idx  (+19 more)
ext/: CMakeLists.txt  imgui_widgets.cpp
res/: photo_name.info]
src/: CMakeLists.txt  base.hpp  briefcase.cpp  briefcase.hpp  filedialog.cpp  filedialog.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  image_render.cpp  image_render.hpp  main.cpp  marble.cpp  marble.hpp  mark.cpp  mark.hpp  markcontainer.cpp  markcontainer.hpp  mygui.hpp  window.cpp  window.hpp  windows_utils.hpp
