
add_library(src STATIC
  window.hpp            window.cpp
  image.hpp             image.cpp
  frame.hpp             frame.cpp
  filedialog.hpp        filedialog.cpp
  mark.hpp              mark.cpp
  markcontainer.hpp     markcontainer.cpp
  image_render.hpp      image_render.cpp
  briefcase.hpp         briefcase.cpp
  marble.hpp            marble.cpp
  mygui.hpp
  base.hpp
)
